190131 11:21 table / list practice

--- a/WebContent/practice2.html
+++ b/WebContent/practice2.html
@@ -8,9 +8,18 @@
 body		{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 
 ul			{ margin-left:20px; list-style-type:none }
-.root		{ line-height:1.8em; }
-.root li	{ padding-left:10px; background:url(/wp_ch5/images/bullet11.jpg) 0 8px no-repeat }
 
+.root {
+	width:200px;
+	margin: 10px auto;
+}
+ul li {
+	margin: 5px 0;
+	background-image: url("/wp_ch5/images/bullet12.jpg");
+	background-position: 0 3px;
+	background-repeat: no-repeat;
+	padding-left: 15px
+}
 </style>
 </head>
 <body>
