--- a/WebContent/practice1.html
+++ b/WebContent/practice1.html
@@ -7,16 +7,41 @@
 *						{ margin:0; padding:0 }
 body					{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 
-.tbl-ex					{ margin:10px auto; border:1px solid #333; border-collapse:collapse; border-left-width:0; border-right-width:0 }
+.tbl-ex {
+	margin: 20px auto;
+	border: 1px solid #333;
+	border-collapse: collapse;
+	border-left-width: 0;
+	border-right-width: 0;
+	
+}
 
-.tbl-ex th, .tbl-ex td	{ border:1px solid #333; padding:8px; border-left-width:0; border-right-width:0  } 
+.tbl-ex th, .tbl-ex td {
+	border: 1px solid #333;
+	padding:8px;
+	border-left-width: 0;
+	border-right-width: 0;
+}
 
-.tbl-ex th				{ background-color:#999; font-size:1.1em; color:#fff; border-top-width:2px; border-bottom-width:2px }
-.tbl-ex td				{ border-style:dotted }
-.tbl-ex tr.even			{ background-color:#E8ECF6  }
+.tbl-ex td {
+	border-style: dotted;
+}
+.tbl-ex tr.even td{
+	background-color: #E8ECF6;
+}
 
-.tbl-ex tr:hover,
-.tbl-ex tr.even:hover 	{ background-color:#fc6; cursor:pointer }
+.tbl-ex tr:hover td {
+	background-color: #fc6;
+	cursor: pointer;
+}
+
+.tbl-ex th {
+	background-color: #999;
+	color: #fff;
+	font-size: 1.1em;
+	border-top-width: 2px;
+	border-bottom-width: 2px;
+}
 
 </style>
 </head>
