--- a/WebContent/ex3.html
+++ b/WebContent/ex3.html
@@ -79,7 +79,7 @@ ul.multi ul ul li { /*세번째 ul을 지정합니다. */
             <li>리스트 스타일</li>
     	</ul>    
     <li>리스트 스타일</li>
-    <li리스트 스타일></li>
+    <li>리스트 스타일</li>
 </ul>
 
 </body>
