--- a/WebContent/practice3-1.html
+++ b/WebContent/practice3-1.html
@@ -4,94 +4,70 @@
 <meta charset="utf-8">
 <title>리스트를 이용한 메뉴 만들기</title>
 <style type="text/css">
-*						{ margin:0; padding:0 }
-body					{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
-
+*	 { margin:0; padding:0 }
+body { font-family: '맑은 고딕', 돋움; font-size:0.75em; color:#333 }
 .tab-box {
 	width:520px;
 	margin:100px auto;
 }
-
 .tab-box ul {
-	height:29px;
-	list-style: none;
+	height: 29px;
+	list-style-type: none;
 }
-
 .tab-box ul li {
 	float: right;
-	border: 1px solid #999;
+	border:1px solid #999;
 	margin-right:2px;
 	padding-top:5px;
 	width:100px;
 	height:22px;
-	text-align: center;
-	background-color: #ccc;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	text-align:center;
+	background-color:#ccc;
+	border-radius:10px 10px 0 0;
 	cursor: pointer;
 }
-
 .tab-box ul li.selected {
 	background-color: #fc6;
 	cursor: default;
 }
-
-.tab-box div{
-	margin-top:-1px;
-	width:516px;
+.tab-box div {
+	width: 516px;
+	margin-top: -1px;
 	border: 1px solid #999;
 	line-height: 200px;
 	text-align: center;
 }
-
 </style>
-
 <script>
 var liSelected = null;
-
 var onClicked = function(){
-	console.log("clicked-"+this)
-	//console.log("clicked-"+li.innerText);
 	if(liSelected != null){
-		liSelected.className="";
+		// unselect
+		liSelected.className = "";
 	}
-	 this.className = "seleted";
+	
+	// select
+	this.className = "selected";
 	liSelected = this;
-};
-	
-window.onload = function(){
-	var li = document.getElementById("tab1");
-	li.onclick = onClicked;
-	
-	var li = document.getElementById("tab2");
-	li.onclick = onClicked;
-	
-	var li = document.getElementById("tab3");
-	li.onclick = onClicked;
-	
-	var li = document.getElementById("tab4");
-	li.onclick = onClicked;
-	
-	var li = document.getElementById("tab5");
-	li.onclick = onClicked;
 }
-
-//li = document.getElementById("tab1");
-//console.log(li);
-/*
-liSelected = null;
-function onClicked(li){
-	//console.log("clicked-"+li.innerText);
-	if(liSeleted != null){
-		liSelected.className("");
-	}
-};
-	li.className = "seleted";
-	liSelected = li;
-*/
-
+window.onload = function(){
+	document.
+	getElementById("tab1").
+	onclick = onClicked;
+	document.
+	getElementById("tab2").
+	onclick = onClicked;
+	document.
+	getElementById("tab3").
+	onclick = onClicked;
+	document.
+	getElementById("tab4").
+	onclick = onClicked;
+	document.
+	getElementById("tab5").
+	onclick = onClicked;
+}
 </script>
-
 </head>
 <body>
 <div class="tab-box">
@@ -102,7 +78,7 @@ function onClicked(li){
         <li id="tab4">메뉴 4</li>
         <li id="tab5">메뉴 5</li>
     </ul>
-    <div id ="tab-view">
+    <div id="tabview">
     	탭뷰입니다.
     </div>
 </div>    
